Changelog updated to reflect current version
Version 0.4.4 is already live in the Chrome Web Store, since mid-January. Updating the changelog to reflect the current state.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+chrome-type-ahead (0.4.4) unstable; urgency=low
+
+  * Fix to allow text entry in web components (custom elements)
+
 chrome-type-ahead (0.4.3) unstable; urgency=low
 
   * issue155: fix isVisible (TypeError: Failed to execute 'getComputedStyle')
